# newcode-backend-dashboard

./: .env.sample  README.md  pyproject.toml
apps/base/: account_utils.py  choices.py  models.py
apps/batch/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/batch/migrations/: 0001_initial.py  0002_batch_updated_at.py  0003_batch_created_at.py  0004_batch_slug.py  0005_alter_batch_options_remove_batch_valid_date_range.py  0006_batch_valid_date_range.py  0007_remove_batch_price.py
apps/installment/: admin.py  apps.py  models.py
apps/installment/migrations/: 0001_initial.py
apps/notifications/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_adminnotification.py  0003_alter_adminnotification_notification_type.py  0004_alter_adminnotification_notification_type_and_more.py
apps/payments/: admin.py  apps.py  models.py  signals.py
apps/payments/migrations/: 0001_initial.py  0002_paymenttransaction.py  0003_remove_paymenttransaction_transaction_id.py
apps/students/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/students/migrations/: 0001_initial.py  0002_alter_studentbatchenrollment_options.py  0003_course_alter_studentbatchenrollment_course.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
core/: urls.py
core/settings/: __init__.py  base.py  dev.py  prod.py  stage.py
docs/: contribution.md  roadmap.md
